syntax = "proto3";

package follow.v1;
option go_package = "./followpb";

service FollowService {
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  rpc Followers(FollowersRequest) returns (FollowersResponse);
  rpc UserFollowStats(UserFollowStatsRequest) returns (UserFollowStatsResponse);
  rpc UserFollowsUser(UserFollowsUserRequest) returns (UserFollowsUserResponse);
}

// Follow / Unfollow Action
message FollowUserRequest {
  string user_id = 1;
  string follow_user_id = 2;
}
message FollowUserResponse {

}
// --

// Followers
message FollowersRequest {
  string user_id = 1;
}

message FollowersResponse {
  repeated Follower followers = 1;
}

message Follower {
  string user_id = 1;
}
// --

// Followers stats
message UserFollowStatsRequest {
  string user_id = 1;
}
message UserFollowStatsResponse {
  int64 followers = 1;
  int64 following = 2;
}
// --

// Does user follows user?
message UserFollowsUserRequest {
  string user_id = 1;
  string follow_user_id = 2;
}

message UserFollowsUserResponse {
  bool status = 1;
}
